# EmotionBridge

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
configs/: audio_gen.yaml  audio_gen_multistyle_smoke.yaml  audio_gen_smoke.yaml  classifier.yaml  classifier_smoke.yaml  experiment_config.yaml  experiment_multistyle_smoke.yaml  experiment_smoke.yaml  generator.yaml  generator_smoke.yaml  phase0.yaml  phase0_classifier.yaml  phase0_classifier_smoke.yaml  phase1.yaml  phase1_multistyle_smoke.yaml  phase1_smoke.yaml  phase2_triplet.yaml  phase2_triplet_smoke.yaml  phase2_validation.yaml  phase3b.yaml  phase3b_smoke.yaml
demo/v2/: manifest.json
demo/v2-dsp/: manifest.json
demo/v2-dsp-harvest/: manifest.json
demo/v2-no-dsp/: manifest.json
docs/: EmotionBridge DSP Post-processing Layer.md  EmotionBridge_Full_USDM.md  prosody_analysis_findings.md
docs/design/: phase1_architecture.md  phase1_data_pipeline.md  phase1_voicevox_client.md
docs/phase3/: EmotionBridge_Phase3.md  EmotionBridge_Phase3_USDM.md  prosody_validation_setup.md
docs/phase3/design/: phase3a_classifier_design.md  phase3a_prosody_design.md  phase3b_generator_design.md  phase3c_pipeline_design.md
emotionbridge/: __init__.py  cli.py  config.py  constants.py
emotionbridge/alignment/: __init__.py  category_mapper.py  triplet_builder.py
emotionbridge/analysis/: __init__.py  embedding_viz.py  emotion2vec.py  jvnv.py  kushinada.py
emotionbridge/data/: __init__.py  visualize.py  wrime.py  wrime_classifier.py
emotionbridge/dsp/: __init__.py  config.py  manipulator.py  mapper.py  processor.py  types.py
emotionbridge/eval/: __init__.py  classification.py  gates.py  manifest.py  registry.py
emotionbridge/generation/: __init__.py  dataset.py  grid.py  pipeline.py  report.py  text_selector.py  validator.py
emotionbridge/inference/: __init__.py  axes.py  bridge_pipeline.py  encoder.py
emotionbridge/model/: __init__.py  classifier.py  generator.py  regressor.py
emotionbridge/scripts/: __init__.py  adjust_style_mapping.py  align_domains.py  analyze_subjective_eval.py  build_style_mapping.py  common.py  evaluate_continuous_axes.py  evaluate_domain_gap.py  evaluate_responsiveness.py  evaluate_roundtrip.py  evaluate_separation.py  evaluate_style_influence.py  extract_egemaps.py  match_emotion_params.py  normalize_features.py  prepare_direct_matching.py  prepare_generator_teacher.py  prepare_jvnv.py  prepare_subjective_eval.py  train_generator.py  upload_artifacts.py  visualize.py
emotionbridge/training/: __init__.py  classification_metrics.py  classifier_trainer.py  generator_trainer.py  metrics.py  trainer.py
emotionbridge/tts/: __init__.py  adapter.py  exceptions.py  heuristic_mapper.py  types.py  voicevox_client.py
tests/: test_bridge_pipeline_dsp.py  test_bridge_pipeline_generator_loader.py  test_build_style_mapping_signal.py  test_classification_metrics.py  test_classifier_trainer_softlabel.py  test_cli_evaluate.py  test_dsp_mapper.py  test_dsp_processor.py  test_eval_gates.py  test_eval_manifest.py  test_eval_registry.py  test_evaluate_roundtrip.py  test_generator_model_serialization.py  test_generator_trainer.py  test_inference_encoder.py  test_prepare_subjective_eval.py  test_style_influence.py  test_style_selector_scoring.py  test_wrime_classifier.py
