[project]
name = "emotionbridge"
version = "1.0.0"
description = "Learning-based conversion engine bridging text emotion analysis and emotional speech synthesis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"accelerate>=1.0.0",
	"datasets>=2.16.0,<4.0.0",
	"fugashi>=1.3.2",
	"httpx>=0.27.0",
	"ipadic>=1.0.0",
	"matplotlib>=3.10.8",
	"numba>=0.60.0",
	"numpy>=1.26.0",
	"opensmile>=2.6.0",
	"pandas>=2.2.0",
	"protobuf>=4.25.0",
	"pyarrow>=15.0.0",
	"pyyaml>=6.0.1",
	"scikit-learn>=1.4.0",
	"scipy>=1.12.0",
	"seaborn>=0.13.2",
	"soundfile>=0.12.0",
	"tensorboard>=2.20.0",
	"torch>=2.2.0",
	"torchaudio>=2.2.0",
	"torchcodec>=0.10.0",
	"transformers>=4.38.0",
	"unidic-lite>=1.0.8",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
