[project]
name = "emotionbridge"
version = "1.0.0"
description = "Learning-based conversion engine bridging text emotion analysis and emotional speech synthesis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"accelerate>=1.12.0",
	"datasets>=4.5.0",
	"httpx>=0.28.1",
	"kernels>=0.12.1",
	"matplotlib>=3.10.8",
	"numpy>=2.4.2",
	"opensmile>=2.6.0",
	"pandas>=3.0.1",
	"pyarrow>=23.0.1",
	"pyyaml>=6.0.3",
	"scikit-learn>=1.8.0",
	"scipy>=1.17.0",
	"seaborn>=0.13.2",
	"soundfile>=0.13.1",
	"torch>=2.10.0",
	"transformers>=5.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E", "W",
  # flake8-2020
  "YTT",
  # flake8-bugbear
  "B",
  # flake8-quotes
  "Q",
  # flake8-debugger
  "T10",
  # flake8-gettext
  "INT",
  # pylint
  "PL",
  # flake8-pytest-style
  "PT",
  # misc lints
  "PIE",
  # flake8-pyi
  "PYI",
  # tidy imports
  "TID",
  # implicit string concatenation
  "ISC",
  # flake8-type-checking
  "TC",
  # comprehensions
  "C4",
  # pygrep-hooks
  "PGH",
  # Ruff-specific rules
  "RUF",
  # flake8-bandit: exec-builtin
  "S102",
  # numpy-legacy-random
  "NPY002",
  # Perflint
  "PERF",
  # flynt
  "FLY",
  # flake8-logging-format
  "G",
  # flake8-future-annotations
  "FA",
  # unconventional-import-alias
  "ICN001",
  # flake8-slots
  "SLOT",
  # flake8-raise
  "RSE"
]
ignore = [
  "E501", # line-too-long
  "D400", # missing-trailing-period
  "D403", # first-word-uncapitalized
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003" # ambiguous-unicode-character-comment
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.format]
docstring-code-format = true
