[project]
name = "emotionbridge"
version = "1.0.0"
description = "Learning-based conversion engine bridging text emotion analysis and emotional speech synthesis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"accelerate>=1.12.0",
	"datasets>=4.5.0",
	"evaluate>=0.4.6",
	"huggingface_hub>=0.35.0",
	"httpx>=0.28.1",
	"kernels>=0.12.1",
	"matplotlib>=3.10.8",
	"numpy>=2.4.2",
	"opensmile>=2.6.0",
	"pandas>=3.0.1",
	"pesq>=0.0.4",
	"pyarrow>=23.0.1",
	"pyworld>=0.3.5",
	"pyyaml>=6.0.3",
	"scikit-learn>=1.8.0",
	"scipy>=1.17.0",
	"seaborn>=0.13.2",
	"setuptools>=80.9.0,<81",
	"soundfile>=0.13.1",
	"torch>=2.10.0",
	"transformers>=5.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E", "W",
  # flake8-2020
  "YTT",
  # flake8-bugbear
  "B",
  # flake8-quotes
  "Q",
  # flake8-debugger
  "T10",
  # flake8-gettext
  "INT",
  # pylint
  "PL",
  # flake8-pytest-style
  "PT",
  # misc lints
  "PIE",
  # flake8-pyi
  "PYI",
  # tidy imports
  "TID",
  # implicit string concatenation
  "ISC",
  # flake8-type-checking
  "TC",
  # comprehensions
  "C4",
  # pygrep-hooks
  "PGH",
  # Ruff-specific rules
  "RUF",
  # flake8-bandit: exec-builtin
  "S102",
  # numpy-legacy-random
  "NPY002",
  # Perflint
  "PERF",
  # flynt
  "FLY",
  # flake8-logging-format
  "G",
  # flake8-future-annotations
  "FA",
  # unconventional-import-alias
  "ICN001",
  # flake8-slots
  "SLOT",
  # flake8-raise
  "RSE"
]
ignore = [
  "E501", # line-too-long
  "D400", # missing-trailing-period
  "D403", # first-word-uncapitalized
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
  "PLC0415", # import-not-at-top — 意図的な lazy import（重い依存の遅延ロード）
  "PLR2004", # magic-value-comparison — ML/音声処理コードでは定数化が可読性を低下させる
  "PLR0913", # too-many-arguments — パイプライン関数では不可避
  "PLR0915", # too-many-statements — 同上
  "PLR0912", # too-many-branches — 同上
  "PLW2901", # redefined-loop-name — PyTorch の .to(device) パターン
  "NPY002", # numpy-legacy-random — seed 一括設定関数内で torch/random と揃えて使用
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
pythonpath = ["."]
